--- a/index.html
+++ b/index.html
@@ -2,65 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
-    <link rel="icon" href="Assets/head-icon.png" />
+    <link rel="stylesheet" href="./src/index.css" />
     <title>Divyansh Gemini</title>
   </head>
-
   <body>
-    <header>
-      <!-- <div class="logo">
-            <img src="Assets/logo.png" alt="logo">
-        </div> -->
-      <nav>
-        <ul>
-          <li><a href="#">Education</a></li>
-          <li><a href="#">Experience</a></li>
-          <li><a href="#">Projects</a></li>
-          <li><a href="#">Contact</a></li>
-        </ul>
-      </nav>
-    </header>
-
-    <main>
-      <section id="section-first">
-        <div id="name-photo">
-          <div class="name">
-            <span>Divyansh Gemini</span>
-            <span>Android App Developer</span>
-          </div>
-          <div class="dp">
-            <img
-              height="400"
-              src="Assets/selfPhoto.png"
-              alt="Photo of Divyansh Gemini"
-            />
-          </div>
-        </div>
-      </section>
-
-      <section id="section-about">
-        <h1>About</h1>
-        <p>
-          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Molestiae
-          nobis ipsa exercitationem? Quae quam vero impedit. Nihil vel aliquam
-          minus cumque omnis rem saepe animi similique recusandae, est eos neque
-          fugit. Dolorum dignissimos alias beatae saepe qui esse reiciendis
-          incidunt adipisci mollitia officia odit, accusamus nobis eveniet totam
-          laudantium, pariatur quos quam explicabo et consectetur architecto vel
-          ducimus expedita doloribus. Odio, placeat adipisci. Veniam asperiores
-          nam velit quos ex atque, eaque provident voluptate similique fugit
-          sapiente sint quasi doloremque praesentium reprehenderit sed inventore
-          earum sequi? Dignissimos, ab! Velit id esse ea non, quos dolores
-          labore iusto autem atque fugiat deleniti?
-        </p>
-      </section>
-
-      <section></section>
-    </main>
-
-    <footer></footer>
+    <div id="root"></div>
+    <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
