--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Divyansh Gemini's personal website" />
+    <meta
+      name="keywords"
+      content="Divyansh Gemini, Divyansh, Gemini, Divyansh Gemini's personal website"
+    />
+    <meta name="author" content="Divyansh Gemini" />
     <link rel="stylesheet" href="./src/index.css" />
     <title>Divyansh Gemini</title>
   </head>
