created Not-Found page

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <title>Divyansh Gemini</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root" class="min-h-screen"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
