--- a/index.html
+++ b/index.html
@@ -2,14 +2,28 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Divyansh Gemini's personal website" />
+
+    <!-- Meta Tags -->
+    <meta name="author" content="Divyansh Gemini" />
     <meta
       name="keywords"
       content="Divyansh Gemini, Divyansh, Gemini, Divyansh Gemini's personal website"
     />
-    <meta name="author" content="Divyansh Gemini" />
+    <meta name="description" content="Divyansh Gemini's personal website" />
+
+    <!-- Open Graph Data -->
+    <meta property="og:image" content="/assets/images/profile.png" />
+    <meta property="og:title" content="Divyansh Gemini" />
+    <meta
+      property="og:description"
+      content="Portfolio website of Divyansh Gemini"
+    />
+
+    <!-- Favicon -->
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+
+    <!-- CSS -->
     <link rel="stylesheet" href="./src/index.css" />
     <title>Divyansh Gemini</title>
   </head>
